# ik-genai-w2

./: Dockerfile  README.md  mcp_client.py  mcp_server.py  pyproject.toml
.devcontainer/: devcontainer.json
